# nesy_bimi_illustration

./: .gitignore  README.md  cf_dpl.qmd  claude_bulk.py  config.yaml  dataset.py  fuzzy_ops.py  illustration.qmd  index.html  losses.py  main.py  models.py  pyproject.toml  ref.bib  rf.py  tch_callbacks.py  tch_data.py  tch_loss.py  tch_main.py  tch_metrics.py  trainer.py
